[tool.poetry]
name = "mdgen"
version = "0.1.0"
description = "A library to generate random markdown text"
authors = ["IgnisDa <ignisda2002@gmail.com>"]
maintainers = ["IgnisDa <ignisda2002@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/IgnisDa/python-random-markdown-generator/"
keywords = []

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^4.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
pytest = "^6.0.2"
pytest-flake8 = "^1.0.6"
rope = "^0.17.0"
pytest-cov = "^2.10.1"
tox = "^3.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
